# main_ws

./: MAIN_PC_SETUP.md  README.md  SIMULATION_SLAM_PATH_WORKFLOW.md  TROUBLESHOOTING.md  UAV_UGV_프로젝트_현황_상세정리2
config/: bashrc.ros2.snippet  fastdds-discovery-server.service
scripts/: fastdds_shm_profile.xml  start_discovery_server.sh
src/: README_SLAM_ASTAR_WORKFLOW.md
src/px4_depth_description/: CMakeLists.txt  package.xml
src/px4_depth_description/launch/: camera_tf.launch.py  spawn_px4_depth_drone.launch.py
src/px4_depth_description/urdf/: x500_depth_down_tf.urdf
src/uav_camera_receiver/: package.xml  setup.cfg  setup.py
src/ugv_bringup/: package.xml  setup.py
src/ugv_path_planner/: package.xml  setup.cfg  setup.py
src/warehouse_mapping/: package.xml  setup.cfg  setup.py
src/warehouse_mapping/config/: README.md
src/warehouse_mapping/launch/: aruco_goal_detector.launch.py  depth_camera_bridge.launch.py  gazebo_warehouse.launch.py  offboard_path.launch.py  pointcloud_obstacle_map.launch.py  rtabmap_mapping.launch.py  slam_mapping.launch.py  warehouse_slam_bringup.launch.py
src/warehouse_mapping/models/: README.md
src/warehouse_mapping/models/aruco_marker_23/: model.config  model.sdf
src/warehouse_mapping/rviz/: README.md
src/warehouse_mapping/warehouse_mapping/: aruco_goal_detector.py  filter_saved_map.py  offboard_path.py  pointcloud_timestamp_republisher.py  pointcloud_to_occupancy_grid.py  px4_odometry_bridge.py  save_occupancy_map.py
src/warehouse_mapping/worlds/: README.md  ugv_warehouse.sdf  warehouse.sdf  warehouse_custom_backup.sdf
(+19 files in other folders)
