<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_mapping</name>
  <version>0.0.0</version>
  <description>Bringup and configuration package for PX4 warehouse mapping simulation.</description>
  <maintainer email="hong@todo.todo">hong</maintainer>
  <license>Apache-2.0</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>px4_depth_description</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rtabmap_launch</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap_viz</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
